# shared-clients

./: api.py  consts.py  loggers.py  main.py  makefile  pyproject.toml  readme.md
clients/: http.py
clients/broker/: __init__.py  base.py  sqs.py
clients/http/: __init__.py  base.py  request.py  response.py  supplier.py  sync.py  sync_supplier.py  types_.py
patterns/: __init__.py  singleton.py
retry/: __init__.py  base.py  retry_strategy.py
routers/: __init__.py  http_client.py  supplier_client.py
tests/clients/broker/: test_base.py  test_broker_base.py  test_sqs.py
tests/clients/http/: test_http_base.py  test_request.py  test_response.py  test_supplier.py
tests/patterns/: test_singleton.py
tests/retry/: test_base.py  test_retry_base.py
tests/utils/: test_text.py  test_unset.py
utils/: text.py  unset.py
