[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
httpx = "^0.27.2"
tenacity = "^9.0.0"
python-json-logger = "^2.0.7"
boto3 = "^1.35.46"
ddtrace = "^2.14.4"
xmltodict = "^0.14.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ARG002",
  "C90",
  "COM812",
  "D1",
  "D203",
  "D213",
  "EM",
  "ERA",
  "FIX",
  "INP",
  "ISC001",
  "PLR0913",
  "PLR2004",
  "PYI041",
  "RUF001",
  "S101",
  "SLF",
  "T20",
  "TD002",
  "TD003",
  "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
