[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
httpx = "^0.27.2"
tenacity = "^9.0.0"
boto3 = "^1.35.36"
aioboto3 = "^13.2.0"
xmltodict = "^0.14.2"
ddtrace = "^2.14.4"
frozenlist = "1.4.1"
python-json-logger = "^2.0.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pytest = "^8.3.3"
pyright = "^1.1.387"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401",
  "ARG002",
  "C90",
  "COM812",
  "D1",
  "D203",
  "D213",
  "EM",
  "ERA",
  "FIX",
  "INP",
  "ISC001",
  "PLR0913",
  "PLR2004",
  "PYI041",
  "RUF001",
  "S101",
  "SLF",
  "T20",
  "TD002",
  "TD003",
  "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**.py" = ["FBT001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
